# lunch-order-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: amazon_purchase_ab_tests.json  hyehwa_poke_lunch.json
docs/: amazon-purchase-pipeline.md  architecture.md  global-delivery-pipeline.md  iphone-mirroring-runbook.md
examples/: com.youngmin9.lunch-order-agent.plist
scripts/: run_hyehwa_lunch.sh
src/lunch_order_agent/: __init__.py  cli.py  models.py  pipeline.py  rules.py
src/lunch_order_agent/providers/: __init__.py  amazon.py  baemin_iphone_mirroring.py  base.py  global_delivery.py
tests/: test_amazon.py  test_pipeline.py  test_rules.py
